[gd_scene load_steps=5 format=2]

[ext_resource path="res://props/jug/jug.png" type="Texture" id=1]
[ext_resource path="res://props/jug/jug.gd" type="Script" id=2]
[ext_resource path="res://props/jug/E.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 7.35716

[node name="Jug" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.0496018, 0 )
scale = Vector2( 0.770571, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.0883884, 0.825625 )
shape = SubResource( 1 )

[node name="E_key" type="Sprite" parent="."]
visible = false
position = Vector2( -0.358801, -15.715 )
scale = Vector2( 0.050057, 0.0537398 )
texture = ExtResource( 3 )
[connection signal="area_entered" from="." to="." method="_on_Jug_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Jug_area_exited"]
